# contenedoresSTL

./: .clang-tidy  .gitignore  .travis.yml  Makefile  algorithm.hpp  array.hpp  array_stl.hpp  compile_flags.txt  iterator.hpp  memory.hpp  test.cpp  type_traits.hpp  utility.hpp  vector.hpp
.github/workflows/: codeql-analysis.yml
array/: access_functions.hpp  array_class.hpp  array_const_iterator_class.hpp  array_const_reverse_iterator_class.hpp  array_iterator_class.hpp  array_reverse_iterator.hpp  class.hpp  constructors.hpp  iterator_functions.hpp
docs/: .doxygen  README.md
docs/lecciones/: allocator.md
include/pgsl/: assert.hpp  gsl.hpp  owners.hpp  utilities.hpp  views.hpp
include/psg/: algorithm.hpp  array.hpp  exception.hpp  initializer_list.hpp  iterator.hpp  list.hpp  memory.hpp  type_traits.hpp  unordered_map.hpp  utility.hpp  vector.hpp
include/psg/array/: access_functions.hpp  (+5 more)
iterator/: legacy_bidirectional_iterator.hpp  legacy_forward_iterator.hpp  legacy_input_iterator.hpp  legacy_random_acces_iterator.hpp
iterator_templates/: legacy_bidirectional_iterator.hpp  legacy_forward_iterator.hpp  legacy_input_iterator.hpp  legacy_random_acces_iterator.hpp
memory/: allocator.hpp
tests/: CMakeLists.txt  Makefile  allocated_unique_ptr.cpp  allocator.cpp  array.cpp  compile_all.bat  compile_all.sh  final_action.cpp  generate_bin.bat  generate_bin.sh  narrow_cast.cpp  pgsl_views.cpp  quick_compile.bat  test.cpp  type_traits.cpp  unique_ptr.cpp  vector.cpp  vector.cxx
tests/scripts/: compile_all.bat  full_run.bat  generate_bin.bat  quick_compile.bat  run_all.bat  run_all.sh
(+48 files in other folders)
